--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Se torne influente na web - Me.Influencer</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/postList.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/postList.css">
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
 
     <script>
@@ -34,7 +34,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" style="display:none;">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="img/Logo_Me-Influencer.png" alt="Me.Influencer"></a>
+                <a class="navbar-brand" href="/index.html"><img src="/img/Logo_Me-Influencer.png" alt="Me.Influencer"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
