Alterações nas páginas e novas imagens
imagem do facebook

--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,6 @@
     // Initialize Firebase
     </script>
 
-
 </head>
 <body id="page-top" class="index">
 
@@ -35,20 +34,20 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="img/Logo_Me-Influencer.png" alt="Me.Influencer"></a>
+                <a class="navbar-brand" href="https://meinfluencer.github.io/"><img src="img/Logo_Me-Influencer.png" alt="Me.Influencer"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="page-scroll">
-                        <a href="index.html">Início</a>
+                        <a href="https://meinfluencer.github.io/">Início</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="sobre.html">Sobre Nós</a>
+                        <a href="https://meinfluencer.github.io/sobre.html">Sobre Nós</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="contato.html">Contato</a>
+                        <a href="https://meinfluencer.github.io/contato.html">Contato</a>
                     </li>
 				 </ul>
             </div>
@@ -133,10 +132,10 @@
                 <h4 class="text-center">Artigos populares</h4>
                 <hr>
                 	<ul style="padding:20px 0px 0px 20px;">
-<li><a href="posts/5-perguntas" title="5 perguntas que você deve responder para ter um canal de vídeos online de sucesso" class="wpp-post-title" target="_self">5 perguntas que você deve responder para ter um canal de vídeos online de sucesso</a> </li>
-<li><a href="posts/engajar-streaming" title="Como engajar sua audiência com vídeo live streaming" class="wpp-post-title" target="_self">Como engajar sua audiência com vídeo live streaming</a> </li>
-<li><a href="posts/video-amador" title="4 dicas para tornar os seus vídeos amadores em profissionais" class="wpp-post-title" target="_self">4 dicas para tornar os seus vídeos amadores em profissionais</a> </li>
-<li><a href="posts/quiz-vlogger" title="Quiz: Qual tipo de Vlogger você é?" class="wpp-post-title" target="_self">Quiz: Qual tipo de Vlogger você é?</a> </li>
+<li><a href="https://meinfluencer.github.io/posts/5-perguntas" title="5 perguntas que você deve responder para ter um canal de vídeos online de sucesso" class="wpp-post-title" target="_self">5 perguntas que você deve responder para ter um canal de vídeos online de sucesso</a> </li>
+<li><a href="https://meinfluencer.github.io/posts/engajar-streaming" title="Como engajar sua audiência com vídeo live streaming" class="wpp-post-title" target="_self">Como engajar sua audiência com vídeo live streaming</a> </li>
+<li><a href="https://meinfluencer.github.io/posts/video-amador" title="4 dicas para tornar os seus vídeos amadores em profissionais" class="wpp-post-title" target="_self">4 dicas para tornar os seus vídeos amadores em profissionais</a> </li>
+<li><a href="https://meinfluencer.github.io/posts/quiz-vlogger" title="Quiz: Qual tipo de Vlogger você é?" class="wpp-post-title" target="_self">Quiz: Qual tipo de Vlogger você é?</a> </li>
 
 </ul>
                 </div>
